--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Chat Global</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <!-- Authentification et interface utilisateur -->
     <div class="auth-container">
         <div id="user-info" style="display:none;">
             <img id="user-pic" alt="Profile Picture" />
@@ -15,10 +17,11 @@
         </div>
         <div id="login-container">
             <h1>Connectez-vous avec Google pour accéder au site</h1>
-            <button id="google-login">Se connecter avec Google</button>
+            <button id="google-login-button">Se connecter avec Google</button>
         </div>
     </div>
 
+    <!-- Chat global -->
     <div id="chat-container" style="display:none;">
         <h2>Chat Global</h2>
         <div id="messages"></div>
@@ -29,9 +32,46 @@
         </form>
     </div>
 
-    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js"></script>
-    <script src="app.js"></script>
+    <!-- Firebase SDKs -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
+
+    <!-- Firebase configuration et logique de connexion -->
+    <script>
+      // Configuration Firebase
+      const firebaseConfig = {
+        apiKey: "AIzaSyAiN8qmbOIE-cnM-slY3s1vjoGByWyt8bk",
+        authDomain: "ethanv1.firebaseapp.com",
+        projectId: "ethanv1",
+        storageBucket: "ethanv1.appspot.com",
+        messagingSenderId: "15504428597",
+        appId: "1:15504428597:web:c77688cad724c1afdfab7c",
+        measurementId: "G-L7JPEWN3TE"
+      };
+
+      // Initialiser Firebase
+      firebase.initializeApp(firebaseConfig);
+      firebase.analytics();
+
+      // Authentification Google
+      const auth = firebase.auth();
+      const provider = new firebase.auth.GoogleAuthProvider();
+
+      // Gestionnaire d'événement pour la connexion
+      document.getElementById('google-login-button').addEventListener('click', () => {
+        auth.signInWithPopup(provider).then((result) => {
+          console.log("Utilisateur connecté :", result.user);
+          document.getElementById('login-container').style.display = 'none';
+          document.getElementById('chat-container').style.display = 'block';
+          document.getElementById('user-name').textContent = result.user.displayName;
+          document.getElementById('user-pic').src = result.user.photoURL;
+        }).catch((error) => {
+          console.error("Erreur de connexion :", error);
+        });
+      });
+    </script>
+
 </body>
 </html>
